Fixed some alignment issues

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,7 +2,7 @@
 body { font-size: 16px; font-family: "Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif; }
 #form, #messages { display: none; }
 .userInfo { color: #FFF; font-weight: bold; font-size: 18px; width: 100%; border: 1px solid rgb(177, 113, 234); padding: 20px 8px; background: rgb(181, 125, 232); text-align: center; }
-.onlineUsersContainer { width: 20%; float: left; min-height: 700px; background-color: rgb(225, 203, 245); }
+.onlineUsersContainer { width: 20%; float: left; min-height: 93vh; background-color: rgb(225, 203, 245); }
 .onlineUsersContainer ul li { list-style-type: none; cursor: pointer; margin: 0; padding: 12px; box-shadow: 0px 2px 8px #C28FF1; border-radius: 10px; }
 .onlineUsersContainer ul li::before { content: "• "; color: #2D9F0B; font-size: 20px; font-weight: bold; padding: 5px; }
 .onlineUsersContainer ul li.active { background: rgba(211, 176, 243, 0.92); }
